Add some snippets.

--- a/nb_dev_python/python_seaborn_en.ipynb
+++ b/nb_dev_python/python_seaborn_en.ipynb
@@ -119,8 +119,58 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Legend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for run in range(100):\n",
+    "    for a in (1., 3.):\n",
+    "        for x in range(10):\n",
+    "            y = a * x + 10. * np.random.normal()\n",
+    "            row = [x, y, a, run]\n",
+    "            l.append(row)\n",
+    "        \n",
+    "df = pd.DataFrame(l, columns=[\"x\", \"y\", \"a\", \"run\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.catplot(x=\"x\", y=\"y\", hue=\"a\", data=df,\n",
+    "            kind=\"point\",\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.catplot(x=\"x\", y=\"y\", hue=\"a\", data=df,\n",
+    "                kind=\"point\",\n",
+    "                height=6, aspect=2);\n",
+    "\n",
+    "g._legend.set_title(\"Slope\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "## Relplot"
@@ -203,10 +253,11 @@
    "source": [
     "l = []\n",
     "\n",
-    "for run in range(100):\n",
+    "sigma = 1.\n",
+    "\n",
+    "for run in range(1000):\n",
     "    for x in np.linspace(-10, 10, 100):\n",
-    "        y = 0\n",
-    "        row = [x, y + np.random.normal(), run]\n",
+    "        row = [x, np.random.normal(loc=0., scale=sigma), run]\n",
     "        l.append(row)\n",
     "        \n",
     "df = pd.DataFrame(l, columns=[\"x\", \"y\", \"run\"])\n",
@@ -238,6 +289,23 @@
     "            units=\"run\", estimator=None, alpha=0.1)\n",
     "\n",
     "plt.axhline(0, color=\"r\", linestyle=\":\", label=\"Actual mean\")\n",
+    "\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"x\", y=\"y\", data=df,\n",
+    "            height=6, aspect=2, marker=\".\",\n",
+    "            estimator=None, alpha=0.15)\n",
+    "\n",
+    "plt.axhline(2. * sigma, color=\"k\", linestyle=\":\", label=r\"$2 \\sigma$\")\n",
+    "plt.axhline(0, color=\"r\", linestyle=\":\", label=\"Actual mean\")\n",
+    "plt.axhline(-2. * sigma, color=\"k\", linestyle=\":\", label=r\"$2 \\sigma$\")\n",
     "\n",
     "plt.legend();"
    ]
@@ -336,6 +404,102 @@
    "outputs": [],
    "source": [
     "sns.relplot(x=\"timepoint\", y=\"signal\", kind=\"line\", data=fmri,\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fourth example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for run in range(100):\n",
+    "    for a in (1., 3.):\n",
+    "        for x in range(10):\n",
+    "            y = a * x + 10. * np.random.normal()\n",
+    "            row = [x, y, a, run]\n",
+    "            l.append(row)\n",
+    "        \n",
+    "df = pd.DataFrame(l, columns=[\"x\", \"y\", \"a\", \"run\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"x\", y=\"y\", hue=\"a\", data=df,\n",
+    "            kind=\"line\",\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The legend is bad because relplot() is made for real values, even for the \"hue\" variable... Here, catplot would be more adapted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Catplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for run in range(100):\n",
+    "    for a in (1., 3.):\n",
+    "        for x in range(10):\n",
+    "            y = a * x + 10. * np.random.normal()\n",
+    "            row = [x, y, a, run]\n",
+    "            l.append(row)\n",
+    "        \n",
+    "df = pd.DataFrame(l, columns=[\"x\", \"y\", \"a\", \"run\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.catplot(x=\"x\", y=\"y\", hue=\"a\", data=df,\n",
+    "            kind=\"point\",\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.catplot(x=\"x\", y=\"y\", hue=\"a\", data=df,\n",
+    "            kind=\"point\",\n",
+    "            markers=\".\",\n",
+    "            scale=0.7,\n",
+    "            linestyles=\":\",\n",
+    "            capsize=0.1,\n",
     "            height=6, aspect=2);"
    ]
   },
