--- a/nb_sci_ai/ai_optimization_cmaes_convergence_vs_number_of_dimensions.ipynb
+++ b/nb_sci_ai/ai_optimization_cmaes_convergence_vs_number_of_dimensions.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "NUM_RUNS = 1000\n",
     "DIMS = (2, 3, 4, 5, 6)\n",
+    "F_TARGET = 1e-30\n",
     "\n",
     "fitness = cma.ff.sphere\n",
     "fitness_name = \"Sphere\"\n",
@@ -97,7 +98,7 @@
     "\n",
     "        x_optimal, es = cma.fmin2(fitness, x0, sigma0,\n",
     "                                  callback=callback_function,\n",
-    "                                  options={'verbose': -9, 'ftarget':1e-9})    # See last example of http://cma.gforge.inria.fr/apidocs-pycma/cma.evolution_strategy.html#fmin\n",
+    "                                  options={'verbose': -9, 'ftarget': F_TARGET, 'maxfevals': 8000})    # See last example of http://cma.gforge.inria.fr/apidocs-pycma/cma.evolution_strategy.html#fmin\n",
     "\n",
     "df = pd.DataFrame(solutions_list)"
    ]
