Add some snippets.

--- a/nb_dev_python/python_pandas_en.ipynb
+++ b/nb_dev_python/python_pandas_en.ipynb
@@ -2844,7 +2844,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.groupby(\"A\").C.idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.loc[ df.groupby(\"A\").C.idxmin() ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First element of each group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"A\").first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Index of the first element of each group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://stackoverflow.com/questions/50704041/r-pandas-groupby-index-of-the-first-row-in-each-group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"A\").head(1)"
    ]
   },
   {
