Add and update notebooks.

--- a/nb_dev_python/python_pulp_getting_started.ipynb
+++ b/nb_dev_python/python_pulp_getting_started.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "    \\min_{x_1,x_2} & \\quad 4 x_1 + 3 x_2 \\\\\n",
+    "    \\max_{x_1,x_2} & \\quad 4 x_1 + 3 x_2 \\\\\n",
     "    \\text{s.t.}    & \\quad   x_1 +   x_2 \\leq 100 \\\\\n",
     "                   & \\quad 2 x_1 +   x_2 \\leq 150 \\\\\n",
     "                   & \\quad 3 x_1 + 4 x_2 \\leq 360 \\\\\n",
