--- a/nb_sci_ai/ai_optimization_linear_programming_stock_problem_en.ipynb
+++ b/nb_sci_ai/ai_optimization_linear_programming_stock_problem_en.ipynb
@@ -151,21 +151,21 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "    \\max_{x_1,x_2,x_3} & \\quad c_1 x_1 + c_2 x_2 + c_3 x_3 \\\\\n",
+    "    \\max_{x_1,x_2,x_3} & \\quad p_1 x_1 + p_2 x_2 + p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad s_0 = 0 \\\\\n",
     "                       & \\quad s_t = s_{t-1} - x_t \\\\\n",
     "                       & \\quad x_t \\geq -(s_{\\max} - s_{t-1}) \\quad \\quad \\text{can't buy more than the \"free space\" of the battery} \\\\\n",
     "                       & \\quad x_t \\leq s_{t-1}               \\quad \\quad \\quad \\quad \\quad \\quad \\text{can't sell more than what have been stored in the battery} \\\\\n",
     "                       & \\\\\n",
     "                       & \\\\\n",
-    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad c-_1 x_1 - c_2 x_2 - c_3 x_3 \\\\\n",
+    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad - p_1 x_1 - p_2 x_2 - p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad s_0 = 0 \\\\\n",
     "                       & \\quad s_t = s_{t-1} - x_t \\\\\n",
     "                       & \\quad x_t \\geq -(s_{\\max} - s_{t-1}) \\Leftrightarrow x_t \\geq -s_{\\max} + s_{t-1} \\\\\n",
     "                       & \\quad x_t \\leq s_{t-1} \\\\\n",
     "                       & \\\\\n",
     "                       & \\\\\n",
-    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad c-_1 x_1 - c_2 x_2 - c_3 x_3 \\\\\n",
+    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad - p_1 x_1 - p_2 x_2 - p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad s_1 = -x_1 \\\\\n",
     "                       & \\quad x_1 \\geq -s_{\\max} \\\\\n",
     "                       & \\quad x_1 \\leq 0 \\\\\n",
@@ -177,7 +177,7 @@
     "                       & \\quad x_3 \\leq s_2 \\Leftrightarrow x_3 \\leq -x_1 - x_2 \\\\\n",
     "                       & \\\\\n",
     "                       & \\\\\n",
-    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad c-_1 x_1 - c_2 x_2 - c_3 x_3 \\\\\n",
+    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad - p_1 x_1 - p_2 x_2 - p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad x_1 \\geq -s_{\\max} \\\\\n",
     "                       & \\quad x_1 \\leq 0 \\\\\n",
     "                       & \\quad x_2 \\geq -s_{\\max} - x_1 \\\\\n",
@@ -186,7 +186,7 @@
     "                       & \\quad x_3 \\leq -x_1 - x_2 \\\\\n",
     "                       & \\\\\n",
     "                       & \\\\\n",
-    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad c-_1 x_1 - c_2 x_2 - c_3 x_3 \\\\\n",
+    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad - p_1 x_1 - p_2 x_2 - p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad x_1 \\geq -s_{\\max} \\\\\n",
     "                       & \\quad x_1 \\leq 0 \\\\\n",
     "                       & \\quad x_1 + x_2 \\geq -s_{\\max} \\\\\n",
@@ -195,7 +195,7 @@
     "                       & \\quad x_1 + x_2 + x_3 \\leq 0 \\\\\n",
     "                       & \\\\\n",
     "                       & \\\\\n",
-    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad c-_1 x_1 - c_2 x_2 - c_3 x_3 \\\\\n",
+    "    \\Leftrightarrow \\min_{x_1,x_2,x_3} & \\quad - p_1 x_1 - p_2 x_2 - p_3 x_3 \\\\\n",
     "    \\text{s.t.}        & \\quad -x_1 \\leq s_{\\max} \\\\\n",
     "                       & \\quad  x_1 \\leq 0 \\\\\n",
     "                       & \\quad -x_1 - x_2 \\leq s_{\\max} \\\\\n",
@@ -210,9 +210,9 @@
     "$$\n",
     "\\color{\\red}{\n",
     "\\boldsymbol{c} = \\begin{pmatrix}\n",
-    "    -c_1 \\\\\n",
-    "    -c_2 \\\\\n",
-    "    -c_3\n",
+    "    -p_1 \\\\\n",
+    "    -p_2 \\\\\n",
+    "    -p_3\n",
     "\\end{pmatrix}\n",
     "}\n",
     "\\quad\n",
@@ -254,10 +254,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cost of energy on the market\n",
-    "cost = [10, 30, 20]\n",
+    "# Price of energy on the market\n",
+    "price = [10, 30, 20]\n",
     "\n",
-    "plt.plot(cost);"
+    "plt.plot(price);"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "# Coefficients of the linear objective function to be minimized\n",
-    "c = -np.array(cost)\n",
+    "p = -np.array(price)\n",
     "\n",
     "# 2-D array which, when matrix-multiplied by x, gives the values of the upper-bound inequality constraints at x.\n",
     "A = [[-1,  0,  0],\n",
@@ -305,7 +305,7 @@
     "x2_bounds = (None, None)\n",
     "bounds = (x0_bounds, x1_bounds, x2_bounds)\n",
     "\n",
-    "scipy.optimize.linprog(c, A_ub=A, b_ub=b, bounds=bounds)"
+    "scipy.optimize.linprog(p, A_ub=A, b_ub=b, bounds=bounds)"
    ]
   },
   {
@@ -323,14 +323,14 @@
    "source": [
     "# Cost of energy on the market\n",
     "\n",
-    "#cost = [10, 30, 20]          # -> -100, 100, 0\n",
-    "#cost = [10, 30, 10, 30]      # -> [-100.,  100., -100.,  100.]\n",
-    "#cost = [10, 30, 10, 30, 30]  # -> [-100.,  100., -100.,  100.,    0.]\n",
-    "#cost = [10, 20, 30, 40]      # -> [-100.,  0., 0.,  100.]\n",
-    "cost = [10, 30, 20, 50]\n",
-    "cost = [10, 30, 20, 50]\n",
+    "#price = [10, 30, 20]          # -> -100, 100, 0\n",
+    "#price = [10, 30, 10, 30]      # -> [-100.,  100., -100.,  100.]\n",
+    "#price = [10, 30, 10, 30, 30]  # -> [-100.,  100., -100.,  100.,    0.]\n",
+    "#price = [10, 20, 30, 40]      # -> [-100.,  0., 0.,  100.]\n",
+    "price = [10, 30, 20, 50]\n",
+    "price = [10, 30, 20, 50]\n",
     "\n",
-    "plt.plot(cost);"
+    "plt.plot(price);"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = -np.array(cost)"
+    "p = -np.array(price)"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.repeat(np.tril(np.ones(len(cost))), 2, axis=0)\n",
+    "A = np.repeat(np.tril(np.ones(len(price))), 2, axis=0)\n",
     "A[::2, :] *= -1\n",
     "A"
    ]
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bounds = tuple((None, None) for _c in cost)\n",
+    "bounds = tuple((None, None) for _p in price)\n",
     "bounds"
    ]
   },
@@ -381,7 +381,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "res = scipy.optimize.linprog(c, A_ub=A, b_ub=b, bounds=bounds)   # , method='revised simplex'"
+    "res = scipy.optimize.linprog(p, A_ub=A, b_ub=b, bounds=bounds)   # , method='revised simplex'"
    ]
   },
   {
