--- a/nb_dev_python/python_pyomo_getting_started_2.ipynb
+++ b/nb_dev_python/python_pyomo_getting_started_2.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConcreteModel(name=\"Getting started\", )\n",
+    "model = ConcreteModel(name=\"Getting started\")\n",
     "\n",
     "c = [-1, 4]\n",
     "b = [ 6, 4, 3]\n",
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConcreteModel(name=\"Getting started\", )\n",
+    "model = ConcreteModel(name=\"Getting started\")\n",
     "\n",
     "c = [-1, 4]\n",
     "b = [ 6, 4, 3]\n",
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConcreteModel(name=\"Getting started\", )\n",
+    "model = ConcreteModel(name=\"Getting started\")\n",
     "\n",
     "c = [-1, 4]\n",
     "b = [ 6, 4, 3]\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConcreteModel(name=\"Getting started\", )\n",
+    "model = ConcreteModel(name=\"Getting started\")\n",
     "\n",
     "c = [-1, 4]\n",
     "b = [ 6, 4, 3]\n",
