--- a/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
+++ b/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
@@ -14,19 +14,35 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auteur: Jérémie Decock"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jdhp-docs/notebooks/master?urlpath=apps%2Fnb_sci_ai%2Fai_ml_multilayer_perceptron_fr.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide"
     ]
    },
+   "outputs": [],
    "source": [
-    "**TODO**\n",
+    "# TODO\n",
     "\n",
-    "Shallow et Deep learning à lire:\n",
-    "- https://www.miximum.fr/blog/introduction-au-deep-learning-2/\n",
-    "- https://sciencetonnante.wordpress.com/2016/04/08/le-deep-learning/\n",
-    "- https://www.technologies-ebusiness.com/enjeux-et-tendances/le-deep-learning-pas-a-pas\n",
-    "- http://scholar.google.fr/scholar_url?url=https://arxiv.org/pdf/1404.7828&hl=fr&sa=X&scisig=AAGBfm07Y2UDlPpbninerh4gxHUj2SJfDQ&nossl=1&oi=scholarr&sqi=2&ved=0ahUKEwjfxMu7jKnUAhUoCsAKHR_RDlkQgAMIKygAMAA"
+    "# Shallow et Deep learning à lire:\n",
+    "# - https://www.miximum.fr/blog/introduction-au-deep-learning-2/\n",
+    "# - https://sciencetonnante.wordpress.com/2016/04/08/le-deep-learning/\n",
+    "# - https://www.technologies-ebusiness.com/enjeux-et-tendances/le-deep-learning-pas-a-pas\n",
+    "# - http://scholar.google.fr/scholar_url?url=https://arxiv.org/pdf/1404.7828&hl=fr&sa=X&scisig=AAGBfm07Y2UDlPpbninerh4gxHUj2SJfDQ&nossl=1&oi=scholarr&sqi=2&ved=0ahUKEwjfxMu7jKnUAhUoCsAKHR_RDlkQgAMIKygAMAA"
    ]
   },
   {
@@ -201,11 +217,11 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\pot_\\cur = \\sum_\\prev \\wcur \\sigout\\prev\n",
+    "\\pot_\\cur = \\sum_\\prev \\wcur \\sigout_{\\prev}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\sigout\\cur = \\activfunc(\\pot_\\cur)\n",
+    "\\sigout_{\\cur} = \\activfunc(\\pot_\\cur)\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -246,7 +262,7 @@
     ]
    },
    "source": [
-    "TODO: quelle différence entre:\n",
+    "TODO: la différence entre:\n",
     "* réseau bouclé\n",
     "* réseau récurent"
    ]
@@ -511,6 +527,13 @@
     "\n",
     "Voc:\n",
     "- *erreur marginale*: **TODO**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note intéressante de Jürgen Schmidhuber : http://people.idsia.ch/~juergen/who-invented-backpropagation.html"
    ]
   },
   {
@@ -1449,7 +1472,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1463,9 +1486,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
