Fix a bug and remove useless imports.

--- a/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
+++ b/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
@@ -36,6 +36,15 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import nnfigs\n",
+    "\n",
+    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
+    "import nnfigs.core as nnfig\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "# TODO\n",
     "\n",
     "# Shallow et Deep learning à lire:\n",
@@ -179,14 +188,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import nnfigs\n",
-    "\n",
-    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
-    "import nnfigs.core as nnfig\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "fig, ax = nnfig.init_figure(size_x=8, size_y=4)\n",
     "\n",
     "nnfig.draw_synapse(ax, (0, -6), (10, 0))\n",
@@ -313,14 +314,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import nnfigs\n",
-    "\n",
-    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
-    "import nnfigs.core as nnfig\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "fig, ax = nnfig.init_figure(size_x=8, size_y=4)\n",
     "\n",
     "nnfig.draw_synapse(ax, (0, -6), (10, 0))\n",
@@ -578,14 +571,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import nnfigs\n",
-    "\n",
-    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
-    "import nnfigs.core as nnfig\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "fig, ax = nnfig.init_figure(size_x=8, size_y=4)\n",
     "\n",
     "nnfig.draw_synapse(ax, (0, -2), (10, 0))\n",
@@ -629,14 +614,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import nnfigs\n",
-    "\n",
-    "# https://github.com/jeremiedecock/neural-network-figures.git\n",
-    "import nnfigs.core as nnfig\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "fig, ax = nnfig.init_figure(size_x=8, size_y=4)\n",
     "\n",
     "HSPACE = 6\n",
