Hide some cells.

--- a/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
+++ b/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
@@ -256,16 +256,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide"
     ]
    },
+   "outputs": [],
    "source": [
-    "TODO: la différence entre:\n",
-    "* réseau bouclé\n",
-    "* réseau récurent"
+    "# TODO: la différence entre:\n",
+    "# * réseau bouclé\n",
+    "# * réseau récurent"
    ]
   },
   {
@@ -279,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fonction objectif: $\\errfunc \\left( \\weights \\left( \\learnit \\right) \\right)$\n",
+    "Fonction objectif: $\\errfunc \\left( \\weights_{\\learnit} \\right)$\n",
     "\n",
     "$\\learnit$: itération courante de l'apprentissage $(1, 2, ...)$"
    ]
@@ -301,7 +303,7 @@
     "\n",
     "$\\Omega$: l'ensemble des neurones de sortie\n",
     "\n",
-    "Le $\\frac12$, c'est juste pour simplifier les calculs de la dérivée ?"
+    "Le $\\frac12$, c'est juste pour simplifier les calculs de la dérivée."
    ]
   },
   {
@@ -383,12 +385,12 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\weights(\\learnit + 1) = \\weights(\\learnit) \\underbrace{- \\learnrate \\nabla \\errfunc \\left( \\weights(\\learnit) \\right)}\n",
+    "\\weights_{\\learnit + 1} = \\weights_{\\learnit} \\underbrace{- \\learnrate \\nabla \\errfunc \\left( \\weights_{\\learnit} \\right)}\n",
     "$$\n",
     "\n",
-    "$- \\learnrate \\nabla \\errfunc \\left( \\weights(\\learnit) \\right)$: descend dans la direction opposée au gradient (plus forte pente)\n",
+    "$- \\learnrate \\nabla \\errfunc \\left( \\weights_{\\learnit} \\right)$: descend dans la direction opposée au gradient (plus forte pente)\n",
     "\n",
-    "avec $\\nabla \\errfunc \\left( \\weights(\\learnit) \\right)$: gradient de la fonction objectif au point $\\weights$\n",
+    "avec $\\nabla \\errfunc \\left( \\weights_{\\learnit} \\right)$: gradient de la fonction objectif au point $\\weights$\n",
     "\n",
     "$\\learnrate > 0$: pas (ou taux) d'apprentissage\n",
     "\n",
@@ -410,10 +412,18 @@
    "source": [
     "Chaque présentation de l'ensemble des exemples = un *cycle* (ou une *époque*) d'apprentissage\n",
     "\n",
-    "Critère d'arrêt de l'apprentissage: quand la valeur de la fonction objectif se stabilise (ou que le problème est résolu avec la précision souhaitée)\n",
-    "\n",
-    "- \"généralement il n'y a qu'un seul minimum local\" (preuve ???)\n",
-    "- \"dans le cas contraire, le plus simple est de recommencer plusieurs fois l'apprentissage avec des poids initiaux différents et de conserver la meilleure matrice $\\weights$ (celle qui minimise $\\errfunc$)\""
+    "Critère d'arrêt de l'apprentissage: quand la valeur de la fonction objectif se stabilise (ou que le problème est résolu avec la précision souhaitée)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# - \"généralement le minimum local suffit\" (preuve ???)\n",
+    "# - \"dans le cas contraire, le plus simple est de recommencer plusieurs fois l'apprentissage avec des poids initiaux différents et de conserver la meilleure matrice $\\weights$ (celle qui minimise $\\errfunc$)\""
    ]
   },
   {
@@ -462,23 +472,36 @@
     "on ajuste les poids $\\weights$ après la présentation d'un seul exemple\n",
     "(\"ce n'est pas une véritable descente de gradient\").\n",
     "C'est mieux pour éviter les minimums locaux, surtout si les exemples sont\n",
-    "mélangés au début de chaque itération\n",
-    "\n",
-    "*Apprentissage différé* (ang. *batch learning*):\n",
-    "**TODO...**\n",
-    "Est-ce que la fonction objectif $\\errfunc$ est une fonction multivariée\n",
-    "ou est-ce une aggrégation des erreurs de chaque exemple ?"
+    "mélangés au début de chaque itération"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide"
     ]
    },
+   "outputs": [],
    "source": [
-    "**TODO: règle du delta / règle du delta généralisée**"
+    "# *Apprentissage différé* (ang. *batch learning*):\n",
+    "# TODO\n",
+    "# Est-ce que la fonction objectif $\\errfunc$ est une fonction multivariée\n",
+    "# ou est-ce une aggrégation des erreurs de chaque exemple ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# **TODO: règle du delta / règle du delta généralisée**"
    ]
   },
   {
@@ -516,10 +539,18 @@
     "\n",
     "- Dans le cas de *l'apprentissage différé* (*batch*), on calcule pour chaque exemple l'erreur correspondante. Leur contribution individuelle aux modifications des poids sont additionnées\n",
     "- L'apprentissage suppervisé fonctionne mieux avec des neurones de sortie linéaires (fonction d'activation $\\activfunc$ = fonction identitée) \"car les signaux d'erreurs se transmettent mieux\".\n",
-    "- Des données d'entrée binaires doivent être choisies dans $\\{-1,1\\}$ plutôt que $\\{0,1\\}$ car un signal nul ne contribu pas à l'apprentissage.\n",
-    "\n",
-    "Voc:\n",
-    "- *erreur marginale*: **TODO**"
+    "- Des données d'entrée binaires doivent être choisies dans $\\{-1,1\\}$ plutôt que $\\{0,1\\}$ car un signal nul ne contribu pas à l'apprentissage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#Voc:\n",
+    "#- *erreur marginale*: **TODO**"
    ]
   },
   {
@@ -1431,17 +1462,6 @@
     "*Softmax*: ...\n",
     "\n",
     "*Multi-label classification*: ... modèle de classifieur qui permet a un exemple d'appartenir à plusieurs classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "source": [
-    "## Notes du livre de Jean-Philippe Rennard"
    ]
   }
  ],
