--- a/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
+++ b/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
@@ -789,6 +789,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Rappel: dérivation des fonctions composées (parfois appelé règle de dérivation en chaîne ou règle de la chaîne)\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\mathrm{d} y}{\\mathrm{d} x} = \\frac{\\mathrm{d} y}{\\mathrm{d} u} \\cdot \\frac{\\mathrm{d} u}{\\mathrm {d} x}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "de (1), (2) et (3) on déduit:"
    ]
   },
