--- a/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
+++ b/nb_sci_ai/ai_ml_multilayer_perceptron_fr.ipynb
@@ -38,12 +38,15 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import nnfigs\n",
+    "#import nnfigs\n",
     "\n",
     "# https://github.com/jeremiedecock/neural-network-figures.git\n",
     "import nnfigs.core as nnfig\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "import ipywidgets\n",
+    "from ipywidgets import interact\n",
     "\n",
     "# TODO\n",
     "\n",
@@ -232,7 +235,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "y = f\\left( \\sum_i \\weight_i \\feature_i \\right)\n",
+    "\\sigout = \\activfunc \\left( \\sum_i \\weight_i \\feature_i \\right)\n",
     "$$"
    ]
   },
@@ -655,6 +658,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact(w1=(-10., 10., 0.5), w2=(-10., 10., 0.5))\n",
+    "def nn1(wb1=0., w1=10.):\n",
+    "    x = np.linspace(-10., 10., 100)\n",
+    "    xb = np.ones(x.shape)\n",
+    "\n",
+    "    s1 = wb1 * xb + w1 * x\n",
+    "    y = sigmoid(s1)\n",
+    "\n",
+    "    plt.plot(x, y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -749,6 +769,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TODO: il manque les biais..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\sigout =\n",
+    "\\activfunc \\left(\n",
+    "\\weight_5 ~ \\underbrace{\\activfunc \\left(\\weight_1 \\feature_1 + \\weight_3 \\feature_2 \\right)}_{\\sigout_1}\n",
+    "+\n",
+    "\\weight_6 ~ \\underbrace{\\activfunc \\left(\\weight_2 \\feature_1 + \\weight_4 \\feature_2 \\right)}_{\\sigout_2}\n",
+    "\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact(wb1=(-10., 10., 0.5), w1=(-10., 10., 0.5), wb2=(-10., 10., 0.5), w2=(-10., 10., 0.5))\n",
+    "def nn1(wb1=0.1, w1=0.1, wb2=0.1, w2=0.1):\n",
+    "    x = np.linspace(-10., 10., 100)\n",
+    "    xb = np.ones(x.shape)\n",
+    "\n",
+    "    s1 = wb1 * xb + w1 * x\n",
+    "    y1 = sigmoid(s1)\n",
+    "    \n",
+    "    s2 = wb2 * xb + w2 * x\n",
+    "    y2 = sigmoid(s2)\n",
+    "    \n",
+    "    s = wb2 * xb + w2 * x\n",
+    "    y = sigmoid(s)\n",
+    "\n",
+    "    plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exemple : réseau de neurones à 2 couches \"cachée\""
    ]
   },
@@ -828,7 +892,7 @@
     "plt.text(x=2*HSPACE+0.4,  y=-VSPACE-1.8, s=tex(STR_SIGOUT + \"_4\"), fontsize=12)\n",
     "\n",
     "# Layer 4\n",
-    "plt.text(x=3*HSPACE-1.25, y=1.5, s=tex(STR_POT + \"_o\"), fontsize=12)\n",
+    "#plt.text(x=3*HSPACE-1.25, y=1.5, s=tex(STR_POT + \"_o\"), fontsize=12)\n",
     "#plt.text(x=3*HSPACE+0.4,  y=1.5, s=tex(STR_SIGOUT + \"_o\"), fontsize=12)\n",
     "\n",
     "plt.text(x=3*HSPACE+2.5,  y=-0.3,\n",
@@ -836,6 +900,29 @@
     "         fontsize=12)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: il manque le biais...\n",
+    "\n",
+    "$\n",
+    "\\newcommand{\\yone}{\\underbrace{\\activfunc \\left(\\weight_1 \\feature_1 + \\weight_3 \\feature_2 \\right)}_{\\sigout_1}}\n",
+    "\\newcommand{\\ytwo}{\\underbrace{\\activfunc \\left(\\weight_2 \\feature_1 + \\weight_4 \\feature_2 \\right)}_{\\sigout_2}}\n",
+    "\\newcommand{\\ythree}{\\underbrace{\\activfunc \\left(\\weight_5 \\yone + \\weight_7 \\ytwo \\right)}_{\\sigout_3}}\n",
+    "\\newcommand{\\yfour}{\\underbrace{\\activfunc \\left(\\weight_6 \\yone + \\weight_8 \\ytwo \\right)}_{\\sigout_4}}\n",
+    "$\n",
+    "\n",
+    "$$\n",
+    "\\sigout =\n",
+    "\\activfunc \\left(\n",
+    "\\weight_9 ~ \\ythree\n",
+    "+\n",
+    "\\weight_{10} ~ \\yfour\n",
+    "\\right)\n",
+    "$$"
    ]
   },
   {
@@ -1990,7 +2077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
