--- a/nb_dev_python/python_scipy_interpolate_en.ipynb
+++ b/nb_dev_python/python_scipy_interpolate_en.ipynb
@@ -13,18 +13,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "source": [
-    "**TODO**\n",
-    "* ..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -58,8 +46,25 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import scipy.interpolate\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import axes3d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpolate 1D functions"
    ]
   },
   {
@@ -80,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear interpollation"
+    "### Linear interpollation"
    ]
   },
   {
@@ -105,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1-D Splines"
+    "### B-Splines"
    ]
   },
   {
@@ -155,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spline linear interpolation"
+    "### Spline linear interpolation"
    ]
   },
   {
@@ -175,13 +180,200 @@
     "plt.plot(x2, y2, \"-r\", label=\"interpollated\")\n",
     "plt.legend();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpolate 2D functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build data\n",
+    "\n",
+    "x = np.arange(-1*np.pi, 1*np.pi, np.pi/4)\n",
+    "y = np.arange(-1*np.pi, 1*np.pi, np.pi/4)\n",
+    "\n",
+    "xx, yy = np.meshgrid(x, y)\n",
+    "\n",
+    "z = np.sin(xx) + np.sin(yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot data\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "\n",
+    "#ax.plot_wireframe(xx, yy, z)\n",
+    "\n",
+    "surf = ax.plot_surface(xx,\n",
+    "                       yy,\n",
+    "                       z,\n",
+    "                       cmap='gnuplot2', # 'jet' # 'gnuplot2'\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pack data to interpolate in a dataframe\n",
+    "\n",
+    "df = pd.DataFrame(columns=['x', 'y', 'z'])\n",
+    "df.x = x\n",
+    "df.y = y\n",
+    "df.z = z\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear interpollation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation: https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.interp2d.html#scipy.interpolate.interp2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = scipy.interpolate.interp2d(x, y, z, kind='linear',\n",
+    "                               bounds_error=True)     # Let 'f' raise an exception when the requested point is outside the range defined by x and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build data\n",
+    "\n",
+    "x_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "y_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "\n",
+    "xx_hd,yy_hd = np.meshgrid(x_hd, y_hd)\n",
+    "\n",
+    "z_hd = np.zeros(xx_hd.shape)\n",
+    "\n",
+    "for xi in range(z_hd.shape[0]):\n",
+    "    for yi in range(z_hd.shape[1]):\n",
+    "        z_hd[xi, yi] = f(x_hd[xi], y_hd[yi])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot data\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "\n",
+    "surf = ax.plot_surface(xx_hd,\n",
+    "                       yy_hd,\n",
+    "                       z_hd,\n",
+    "                       cmap='gnuplot2', # 'jet' # 'gnuplot2'\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cubic splines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = scipy.interpolate.interp2d(x, y, z, kind='cubic',\n",
+    "                               bounds_error=True)     # Let 'f' raise an exception when the requested point is outside the range defined by x and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build data\n",
+    "\n",
+    "x_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "y_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "\n",
+    "xx_hd,yy_hd = np.meshgrid(x_hd, y_hd)\n",
+    "\n",
+    "z_hd = np.zeros(xx_hd.shape)\n",
+    "\n",
+    "for xi in range(z_hd.shape[0]):\n",
+    "    for yi in range(z_hd.shape[1]):\n",
+    "        z_hd[xi, yi] = f(x_hd[xi], y_hd[yi])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot data\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "\n",
+    "surf = ax.plot_surface(xx_hd,\n",
+    "                       yy_hd,\n",
+    "                       z_hd,\n",
+    "                       cmap='gnuplot2', # 'jet' # 'gnuplot2'\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -195,9 +387,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
