--- a/nb_dev_python/python_scipy_interpolate_en.ipynb
+++ b/nb_dev_python/python_scipy_interpolate_en.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "meta",
-     "draft"
+     "meta"
     ]
    },
    "source": [
@@ -101,8 +100,8 @@
     "\n",
     "y2 = f(x2)\n",
     "\n",
-    "plt.plot(x, y, \":b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \"-r\", label=\"interpollated\")\n",
+    "plt.plot(x, y, \"o:b\", label=\"original\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
     "plt.legend();"
    ]
   },
@@ -133,8 +132,8 @@
     "\n",
     "y2 = scipy.interpolate.splev(x2, spl)\n",
     "\n",
-    "plt.plot(x, y, \":b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \"-r\", label=\"interpollated\")\n",
+    "plt.plot(x, y, \"o:b\", label=\"original\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
     "plt.legend();"
    ]
   },
@@ -151,8 +150,8 @@
     "\n",
     "y2 = scipy.interpolate.splev(x2, spl)\n",
     "\n",
-    "plt.plot(x, y, \":b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \"-r\", label=\"interpollated\")\n",
+    "plt.plot(x, y, \"o:b\", label=\"original\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
     "plt.legend();"
    ]
   },
@@ -176,8 +175,8 @@
     "\n",
     "y2 = f(x2)\n",
     "\n",
-    "plt.plot(x, y, \":b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \"-r\", label=\"interpollated\")\n",
+    "plt.plot(x, y, \"o:b\", label=\"original\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
     "plt.legend();"
    ]
   },
