--- a/nb_dev_python/python_scipy_interpolate_en.ipynb
+++ b/nb_dev_python/python_scipy_interpolate_en.ipynb
@@ -297,6 +297,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Non uniform grid data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation: https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.interp2d.html#scipy.interpolate.interp2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build data\n",
+    "\n",
+    "x_nu = np.arange(-1*np.pi, 1*np.pi, np.pi/4)\n",
+    "y_nu = np.arange(-1*np.pi, 1*np.pi, np.pi/4)\n",
+    "\n",
+    "x_nu = x_nu.tolist()\n",
+    "y_nu = y_nu.tolist()\n",
+    "\n",
+    "del x_nu[2]\n",
+    "del y_nu[2]\n",
+    "\n",
+    "xx, yy = np.meshgrid(x_nu, y_nu)\n",
+    "\n",
+    "z_nu = np.sin(xx) + np.sin(yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = scipy.interpolate.interp2d(x_nu, y_nu, z_nu, kind='linear',\n",
+    "                               bounds_error=True)     # Let 'f' raise an exception when the requested point is outside the range defined by x and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build data\n",
+    "\n",
+    "x_nu_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "y_nu_hd = np.arange(-1*np.pi, 1*np.pi-np.pi/4, np.pi/32)\n",
+    "\n",
+    "xx_nu_hd,yy_nu_hd = np.meshgrid(x_nu_hd, y_nu_hd)\n",
+    "\n",
+    "z_nu_hd = np.zeros(xx_nu_hd.shape)\n",
+    "\n",
+    "for xi in range(z_nu_hd.shape[0]):\n",
+    "    for yi in range(z_nu_hd.shape[1]):\n",
+    "        z_nu_hd[xi, yi] = f(x_nu_hd[xi], y_nu_hd[yi])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot data\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "\n",
+    "surf = ax.plot_surface(xx_nu_hd,\n",
+    "                       yy_nu_hd,\n",
+    "                       z_nu_hd,\n",
+    "                       cmap='gnuplot2', # 'jet' # 'gnuplot2'\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       shade=False)\n",
+    "\n",
+    "surf = ax.plot_surface(xx_hd,\n",
+    "                       yy_hd,\n",
+    "                       z_hd,\n",
+    "                       cmap='gnuplot2', # 'jet' # 'gnuplot2'\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       alpha=0.5,\n",
+    "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cubic splines"
    ]
   },
